// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero component renders level 2 with no image 1`] = `
<div
  class="Hero Hero--fat"
>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    <div
      class="content"
    >
      <div />
      <h1
        class="MuiTypography-root title Typography Typography--underline MuiTypography-h1"
      >
        Concrete Tiles
      </h1>
      <div
        class="text"
      />
    </div>
  </div>
</div>
`;

exports[`Hero component renders level 3 with no image & light themed 1`] = `
<div
  class="Hero Hero--light Hero--fat"
>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    <div
      class="content"
    >
      <div />
      <h1
        class="MuiTypography-root title Typography Typography--underline MuiTypography-h1"
      >
        Concrete Tiles
      </h1>
      <div
        class="text"
      />
    </div>
  </div>
</div>
`;

exports[`Hero component renders with children 1`] = `
<div
  class="Hero Hero--fat"
>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    <div
      class="content"
    >
      <div />
      <h1
        class="MuiTypography-root title Typography Typography--underline MuiTypography-h1"
      >
        Concrete Tiles
      </h1>
      <div
        class="text"
      >
        <p
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          Excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum
        </p>
      </div>
    </div>
  </div>
  <div
    class="image"
    style="background-image: url(path-to-image);"
  />
</div>
`;
